# CryptoStreams

./: .clang-format  .gitignore  .gitmodules  .sanitizers_blacklist.txt  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Docker.md  Dockerfile  README.md  generator.cc  generator.h  generator.json  generator.py  main.cc  stream.h  streams.cc  streams.h  version.h.in
streams/block/: CMakeLists.txt  block_cipher.h  block_factory.cpp  block_factory.h  block_stream.cc  block_stream.h
streams/block/ciphers/: common_fun.h
streams/block/ciphers/aes/: aes.cpp  aes.h
streams/block/ciphers/aria/: aria.cpp  aria.h  aria_block.cpp  aria_block.h
streams/block/ciphers/blowfish/: blowfish.cpp  blowfish.h  blowfish_factory.cpp  blowfish_factory.h
streams/block/ciphers/camellia/: camellia.cpp  camellia.h  camellia_block.cpp  camellia_block.h
streams/block/ciphers/cast/: cast.cpp  cast.h  cast_block.cpp  cast_block.h
streams/block/ciphers/des/: des.cpp  des.h  single_des.cpp  single_des.h  triple_des.cpp  triple_des.h
streams/block/ciphers/gost/: gost89.cpp  gost89.h  gost_block.cpp  gost_block.h
streams/block/ciphers/idea/: idea.cpp  idea.h  idea_block.cpp  idea_block.h  idea_factory.cpp  idea_factory.h
streams/block/ciphers/kasumi/: kasumi.cpp  kasumi.h  kasumi_factory.cpp  kasumi_factory.h
streams/block/ciphers/kuznyechik/: kuznyechik.cpp  kuznyechik.h  kuznyechik_factory.cpp  kuznyechik_factory.h
streams/block/ciphers/lightweight/: lightweight.h
streams/block/ciphers/lowmc/: README.md  lowmc.cpp  lowmc.h  lowmc_ref.cpp  lowmc_ref.h
streams/block/ciphers/mars/: mars.h  mars_ref.cpp  mars_ref.h
streams/block/ciphers/misty1/: misty1.cpp  misty1.h  misty1_factory.cpp  misty1_factory.h
streams/block/ciphers/noekeon/: noekeon.cpp  noekeon.h  noekeon_factory.cpp  noekeon_factory.h
streams/block/ciphers/rc4/: rc4.cpp  rc4.h
streams/block/ciphers/rc6/: rc6.cpp  rc6.h  rc6_factory.cpp  rc6_factory.h  rc6_ref.cpp  rc6_ref.h
streams/block/ciphers/seed/: seed.cpp  seed.h  seed_block.cpp  seed_block.h
streams/block/ciphers/serpent/: serpent-api.h  serpent-aux.cpp  serpent-aux.h  serpent-ref.cpp  serpent-ref.h  serpent-tables.h  serpent.h
streams/block/ciphers/shacal2/: shacal2.cpp  shacal2.h  shacal2_factory.cpp  shacal2_factory.h
streams/block/ciphers/simon/: simon.cpp  simon.h
streams/block/ciphers/speck/: speck.cpp  speck.h
streams/block/ciphers/tea/: tea.cpp  tea.h
streams/block/ciphers/twofish/: std_defs.h  twofish.cpp  twofish.h  twofish_factory.cpp  twofish_factory.h
streams/block/ciphers/xtea/: xtea.cpp  xtea.h  xtea_factory.cpp  xtea_factory.h
streams/estream/: CMakeLists.txt  estream_cipher.cc  estream_cipher.h  estream_interface.h  estream_stream.cc  estream_stream.h
streams/estream/ciphers/: ecrypt-portable.h
streams/estream/ciphers/abc/: abc-v3.cpp  abc.h  ecrypt-sync.h
streams/estream/ciphers/achterbahn/: ecrypt-sync.h
streams/estream/ciphers/chacha/: chacha.cpp  ecrypt-sync.h
streams/estream/ciphers/cryptmt/: ecrypt-sync.h  sse2.cpp
streams/estream/ciphers/decim/: decim-128.c  decim-v2.cpp  decimv2.h  ecrypt-sync.h
streams/estream/ciphers/dicing/: dicing-v2.cpp  ecrypt-sync.h
streams/estream/ciphers/dragon/: dragon.cpp  ecrypt-sync.h
streams/estream/ciphers/edon80/: ecrypt-sync.h
streams/estream/ciphers/ffcsr/: ecrypt-sync.h  f-fcsr-h.cpp
streams/estream/ciphers/fubuki/: ecrypt-sync.h  fubuki.cpp
streams/estream/ciphers/grain/: ecrypt-sync.h  grain-128.cpp  grain-v1.cpp
streams/estream/ciphers/hc-128/: ecrypt-sync.h  hc-128.cpp
streams/estream/ciphers/hermes/: ecrypt-sync.h  hermes.cpp
streams/estream/ciphers/lex/: ecrypt-sync.h
streams/estream/ciphers/mag/: ecrypt-sync.h  mag.cpp
streams/estream/ciphers/mickey/: ecrypt-sync.h  mickey-128-v2.cpp
streams/estream/ciphers/mir-1/: ecrypt-sync.h  mir-1.cpp  mir1.h
streams/estream/ciphers/moustique/: ecrypt-ssyn.h
streams/estream/ciphers/pomaranch/: ecrypt-sync.h
streams/estream/ciphers/py/: ecrypt-sync.h
streams/estream/ciphers/rabbit/: ecrypt-sync.h  rabbit.cpp
streams/estream/ciphers/salsa20/: ecrypt-sync.h
streams/estream/ciphers/sfinks/: ecrypt-sync.h
streams/estream/ciphers/sosemanuk/: ecrypt-sync.h  sosemanuk.cpp
streams/estream/ciphers/tea/: ecrypt-sync.h  tea.cpp
streams/estream/ciphers/trivium/: ecrypt-sync.h  trivium.cpp
streams/estream/ciphers/tsc-4/: ecrypt-sync.h
streams/estream/ciphers/wg/: ecrypt-sync.h
streams/estream/ciphers/yamb/: yamb.cpp
streams/estream/ciphers/zk-crypt/: ZKengine.h  ecrypt-sync.h
streams/hash/others/: CMakeLists.txt  others_factory.cc  others_factory.h  others_interface.h  others_stream.cc  others_stream.h
streams/hash/others/hash_functions/: hash_functions.h
streams/prngs/: CMakeLists.txt  prng_factory.cc  prng_factory.h  prng_interface.h  prng_stream.cc  prng_stream.h
streams/prngs/std-prngs/: CMakeLists.txt  std_prng_factory.cc  std_prng_interface.h
streams/prngs/std-prngs/functions/: lcg_generator.h  mesenne_twister_generator.h  subtract_with_carry_generator.h
streams/prngs/testu01-prngs/: CMakeLists.txt  testu01_factory.cc  testu01_factory.h  testu01_interface.h
streams/prngs/testu01-prngs/includes/: config.h  gdef.h  gdefconf.h  unif01.c  unif01.h
streams/sha3/: CMakeLists.txt  sha3_factory.cc  sha3_factory.h  sha3_interface.h  sha3_stream.cc  sha3_stream.h
streams/sha3/hash_functions/ARIRANG/: Arirang_sha3.cpp  Arirang_sha3.h
streams/sha3/hash_functions/Abacus/: Abacus_sha3.cpp  Abacus_sha3.h
streams/sha3/hash_functions/Aurora/: Aurora_sha3.cpp  Aurora_sha3.h
streams/sha3/hash_functions/BMW/: BMW_sha3.cpp  BMW_sha3.h
streams/sha3/hash_functions/Blake/: Blake_sha3.cpp  Blake_sha3.h
streams/sha3/hash_functions/Blender/: Blender_sha3.cpp  Blender_sha3.h
streams/sha3/hash_functions/Boole/: Boole_sha3.cpp  Boole_sha3.h
streams/sha3/hash_functions/CHI/: Chi_sha3.cpp  chi.h  (+1 more)
streams/stream_ciphers/: CMakeLists.txt  stream_cipher.cc  stream_cipher.h  stream_interface.h  stream_stream.cc  stream_stream.h
streams/stream_ciphers/estream/: ecrypt-config.h
(+2192 files in other folders)
