add_library(block STATIC EXCLUDE_FROM_ALL
    block_stream
    block_cipher
    block_factory
    ciphers/common_fun.h
    # === block cipher files ===
    ciphers/tea/tea
    ciphers/aes/aes
    ciphers/aria/aria
    ciphers/aria/aria_block
    ciphers/camellia/camellia
    ciphers/camellia/camellia_block
    ciphers/gost/gost89
    ciphers/gost/gost_block
    ciphers/seed/seed
    ciphers/seed/seed_block
    ciphers/blowfish/blowfish
    ciphers/blowfish/blowfish_factory
    ciphers/mars/mars
    ciphers/mars/mars_ref
    ciphers/rc6/rc6
    ciphers/rc6/rc6_ref
    ciphers/serpent/serpent
    ciphers/serpent/serpent-ref
    ciphers/serpent/serpent-aux
    ciphers/serpent/serpent-api.h
    ciphers/serpent/serpent-tables.h
    ciphers/twofish/twofish
    ciphers/twofish/std_defs.h
    ciphers/simon/simon
    ciphers/speck/speck
    ciphers/des/des
    ciphers/des/single_des
    ciphers/des/triple_des 
    ciphers/idea/idea
    ciphers/idea/idea_block
    ciphers/cast/cast
    ciphers/cast/cast_block
    ciphers/kasumi/kasumi
    ciphers/kasumi/kasumi_factory
    ciphers/kuznyechik/kuznyechik
    ciphers/kuznyechik/kuznyechik_factory
    ciphers/misty1/misty1
    ciphers/misty1/misty1_factory
    ciphers/noekeon/noekeon
    ciphers/noekeon/noekeon_factory
    ciphers/shacal2/shacal2
    ciphers/shacal2/shacal2_factory
    ciphers/xtea/xtea
    ciphers/xtea/xtea_factory

    ciphers/lightweight/lightweight.h
    ciphers/lightweight/common/cipher.h
    ciphers/lightweight/common/rotations/rot8.h
    ciphers/lightweight/common/rotations/rot16.h
    ciphers/lightweight/common/rotations/rot32.h

    ciphers/lightweight/chaskey/chaskey
    ciphers/lightweight/fantomas/fantomas
    ciphers/lightweight/hight/hight
    ciphers/lightweight/lblock/lblock
    ciphers/lightweight/lea/lea
    ciphers/lightweight/led/led
    ciphers/lightweight/piccolo/piccolo
    ciphers/lightweight/pride/pride
    ciphers/lightweight/pride/pride_functions.h
    ciphers/lightweight/prince/prince
    ciphers/lightweight/rc5-20/rc5_20
    ciphers/lightweight/rectangle/rectangle
    ciphers/lightweight/road_runner/road_runner
    ciphers/lightweight/robin/robin
    ciphers/lightweight/robin_star/robin_star
    ciphers/lightweight/sparx/sparx
    ciphers/lightweight/twine/twine

    ciphers/lowmc/lowmc_ref
    ciphers/lowmc/lowmc.cpp
    ciphers/lowmc/lowmc.h
    )

target_link_libraries(block eacirc-core)
